--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <body>
         <div class="header">
-            <a href="#default" class="logo"><img src="logo.jpg" height="50px"> Christmas 2022 - Jash Maniar</a>
+            <a href="#default" class="logo"><img src="https://i.postimg.cc/6qVnmDTh/coollogo-com-24021905.png" height="50px"> Christmas 2022 - Jash Maniar</a>
             <div class="header-right">
               <a class="active" href="#home">Home</a>
               <a href="#game">Games & Apps</a>
